2005-07-16  John Luke  <john.luke@gmail.com>

	* Gui/Dialogs/ReferenceDialog/ProjectReferencePanel.cs:
	sort by Projet name

2005-07-14  Ben Motmans  <ben.motmans@gmail.com>

	* Gui/Pads/ProjectPad/FolderNodeBuilder.cs:
	#73772, 'remember action' in add files dialog

	* Gui/Pads/OpenTaskView.cs:
	show warnings after errors + sortable column based on task type

	* Services/File/RecentOpen.cs: emit correct event

	* Gui/Pads/SolutionPad/TreeViewPad.cs:
	make sure the parent node of the currently edited node is expanded

	* Services/DefaultLoggingService.cs: make sure log4net is always 
	configured, even if the .config file doesn't exist

2005-07-13  Lluis Sanchez Gual  <lluis@novell.com> 

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs:
	* Gui/Workbench/Layouts/SdiWorkspaceWindow.cs:
	* Gui/Workbench/DefaultWorkbench.cs:
	* Commands/AutostartCommands.cs: Don't abuse ShowAll().
	
	* Gui/Dialogs/NewProjectDialog.cs: Use a default icon for the template
	if none is provided.
	
	* Gui/Dialogs/CombineOptionsDialog.cs:
	* Gui/Dialogs/ProjectOptionsDialog.cs: IConfiguration can't be renamed
	anymore, so to change the name, a copy has to be made.
	
	* Gui/Pads/SolutionPad/TreeViewPad.cs: ExpandToNode should not expand
	the current node, only the parents.
	
	* Gui/Pads/SolutionPad/NodeState.cs: Save/restore the selected node in the
	node state tree.
	
	* Gui/Pads/HelpBrowser/HelpViewer.cs:
	* Gui/Pads/HelpBrowser/MonodocTreePad.cs:
	* Gui/Pads/DefaultMonitorPad.cs:
	* Gui/Pads/TerminalPad.cs:
	* Gui/Pads/OpenTaskView.cs: The responsibility of showing the widgets of
	a pad is for the pad. The workbench won't ShowAll any more.
	
	* Gui/ToolWidgets/ConfigurationComboBox.cs: Update the combo when
	configurations are added or removed.
	
	* Internal/Project/Project/IConfiguration.cs: Don't allow renaming of
	configurations.
	
	* Internal/Project/Project/AbstractConfiguration.cs: Make Clone work
	for classes with no default constructor.
	